[cms-tree] Fix style, using flex to align the tree node content

--- a/cms/modules/src/block/block-tree.scss
+++ b/cms/modules/src/block/block-tree.scss
@@ -1,5 +1,4 @@
 .block-node {
-  width: calc(100% - 20px);
   cursor: pointer;
   display: inline-block;
 
